filter by date range

--- a/demo.html
+++ b/demo.html
@@ -20,6 +20,11 @@
 
     <ui-stats-timeline label="Raw Data with Trendline" units="%" groupBy="day" smooth="false"
       src="https://query.glgroup.com/councilApplicant/getStats.mustache" limit="30" trendline="true"
+      valueProperty="accept_rate" showChange="false" since="2015-05-22" until="2015-05-25">
+    </ui-stats-timeline>
+
+    <ui-stats-timeline label="Raw Data with Trendline" units="%" groupBy="day" smooth="false"
+      src="https://query.glgroup.com/councilApplicant/getStats.mustache" limit="30" trendline="true"
       valueProperty="accept_rate" showChange="false">
     </ui-stats-timeline>
 
