support inverted changes

--- a/demo.html
+++ b/demo.html
@@ -63,7 +63,7 @@
       valueProperty="accept_rate" groupByFunction="average">
     </ui-stats-timeline>
     
-    <ui-stats-timeline label="Mean Response time" units="ms" limit="30" absoluteChange="true"
+    <ui-stats-timeline label="Mean Response time" units="ms" limit="30" absoluteChange="true" invertChange="true"
       src="https://query.glgroup.com/councilApplicant/getStats.mustache" type="area"
       valueProperty="accepted">
     </ui-stats-timeline>
