--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -1,7 +1,7 @@
 <polymer-element name="ui-stats-timeline" attributes="data src limit label
    groupBy groupByFunction reduction units dateProperty valueProperty datePattern
    smooth type valueProperties method trendline transform absoluteChange showChange since until
-   invertChange
+   invertChange includePartialGroups
    function
    ">
   <link rel="import" href="../google-chart/google-chart.html">
