fixed legends to work in bootstrap

--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,8 @@
 
   <head>
     <title>ui-stats</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="import" href="node_modules/polymer/polymer.html">
     <link rel="import" href="src/ui-stats.html">
     <style>
@@ -14,7 +16,7 @@
     </style>
   </head>
 
-  <body unresolved>
+  <body unresolved class="container">
     
     <h1>Timelines</h1>
 
