--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -15,24 +15,23 @@
       <div class="data" hidden?="{{reduction == 'none'}}">
         <div class="loading" hidden?="{{!loading}}">Loading...</div>
         <div class="number" hidden?="{{loading}}">
-          <template if="{{units == '%'}}">{{value | percentage}}</template>
-          <template if="{{units != '%'}}">{{value | decimalNumber}}{{units}}</template>
+          <template if="{{units == '%'}}">{{value | percentage}}<span class="units">{{units}}</span></template>
+          <template if="{{units != '%'}}">{{value | decimalNumber}}<span class="units"> {{units}}</span></template>
         </div>
 
-        <div class="{{ {change: true, increase: improving, decrease: !improving} | tokenList }}" hidden?="{{loading || !showChange}}">
+        <!-- <div class="{{ {change: true, increase: improving, decrease: !improving} | tokenList }}" hidden?="{{loading || !showChange}}">
           <template if="{{change > 0}}">▲</template>
           <template if="{{change < 0}}">▼</template>
           <template if="{{absoluteChange}}">{{change | absv | decimalNumber }}{{units}}</template>
-          <template if="{{!absoluteChange}}">{{change | absv | percentage }}</template>
+          <template if="{{!absoluteChange}}">{{change | absv | percentage }}{{units}}</template>
           {{groupBy}} over {{groupBy}}
-        </div>
+        </div> -->
 
         <div class="{{ {change: true, increase: totalImproving, decrease: !totalImproving} | tokenList }}" hidden?="{{loading || !showChange}}">
           <template if="{{totalChange > 0}}">▲</template>
           <template if="{{totalChange < 0}}">▼</template>
-          <template if="{{absoluteChange}}">{{totalChange | absv | decimalNumber }}{{units}}</template>
-          <template if="{{!absoluteChange}}">{{totalChange | absv | percentage }}</template>
-          overall
+          <template if="{{absoluteChange}}">{{totalChange | absv | decimalNumber }} {{units}}</template>
+          <template if="{{!absoluteChange}}">{{totalChange | absv | percentage }}{{units}}</template>
         </div>
         
       </div>
