--- a/demo.html
+++ b/demo.html
@@ -25,7 +25,7 @@
 
     <ui-stats-timeline label="Data with Trendline" units="%" groupBy="day" smooth="false"
       src="https://query.glgroup.com/councilApplicant/getStats.mustache" limit="30" trendline="true"
-      valueProperty="accept_rate" showChange="true" since="2015-05-22" until="2015-07-25">
+      valueProperty="accept_rate" showChange="true" since="-32d" until="-2d">
     </ui-stats-timeline>
 
     <ui-stats-timeline label="Raw Data with Trendline" units="%" groupBy="day" smooth="false"
