default to trend

--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
     
     <ui-stats-timeline label="Avg Daily Attach To Paid May to Present" since="2015-05-07"
     valueproperty="HoursToPaid" units="Hours" src="https://services.glgresearch.com/epiquery/statusboard/asia_timeToStatuses.mustache"
-     trendline="true" reduction="trend">
+     trendline="true">
     </ui-stats-timeline>
 
     <ui-stats-timeline label="Data with Trendline" units="%" groupBy="day" smooth="false"
