new attribute labels, to override property names

--- a/demo.html
+++ b/demo.html
@@ -98,6 +98,7 @@
 
     <ui-stats-timeline label="Multi-Series Data (stacked)"  limit="365" reduction="sum" groupBy="week"
       src="https://services.glgresearch.com/epiquery/councilApplicant/getStats.mustache" type="area"
+      labels="Via Resume, Via LinkedIn, By Form"
       valueProperties="resume_applied, li_applied, form_applied" isStacked="true">
     </ui-stats-timeline>
 
