--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./ui-stats-timeline.less">
 
     <h2>{{label}}</h2>
-    <span class="comment">{{comment}}</span>
+    <span class="comment"><content></content></span>
     <div class="timeline">
 
       <div class="data" hidden?="{{reduction == 'none'}}">
