reworked the expression parsing to support non-js-safe vars
no longer any need to use underscores for spaces

--- a/demo.html
+++ b/demo.html
@@ -32,7 +32,7 @@
 
     <ui-stats-timeline label="Recommender Attendance (last 30 days)" groupby="day"
      src="https://services.glgresearch.com/event-rec-text-matching/responseCounts?when=LAST_N_DAYS:30"
-     dateProperty="when" valueProperties="Confirmed or RSVP, Confirmed, Half_of_RSVP = Confirmed_or_RSVP / 2"
+     dateProperty="when" valueProperties="Confirmed or RSVP, Confirmed, Half of RSVP = Confirmed or RSVP / 2"
      smooth="false" type="area" isStacked="false" includepPartialGroups="true" reduction="sum">
     </ui-stats-timeline>
 
