update demo for expression parser

--- a/demo.html
+++ b/demo.html
@@ -22,19 +22,19 @@
     <h1>Timelines</h1>
     
     <ui-stats-timeline label="Contacts Created Using LinkedIn Copy/Paste (Stacked)" limit="30" function="none"
-  src="https://sfapi.glgroup.com/api/cptool/stats" 
-  type="area" valueProperties="Corporate - Industrials, Corporate - Corporation, Corporate - Technology & Services" isStacked="true">
-</ui-stats-timeline>
+      src="https://sfapi.glgroup.com/api/cptool/stats" 
+      type="area" valueProperties="'Corporate - Industrials', 'Corporate - Corporation', 'Corporate - Technology & Services'" isStacked="true">
+    </ui-stats-timeline>
 
-<ui-stats-timeline label="Contacts Created Using LinkedIn Copy/Paste" limit="30" function="none"
-  src="https://sfapi.glgroup.com/api/cptool/stats" 
-  type="area" valueProperties="Corporate - Industrials, Corporate - Corporation, Corporate - Technology & Services">
-</ui-stats-timeline>
+    <ui-stats-timeline label="Contacts Created Using LinkedIn Copy/Paste (Stacked)" limit="30" function="none"
+      src="https://sfapi.glgroup.com/api/cptool/stats" 
+      type="area" valueProperties="Corporate - Industrials, Corporate - Corporation, Corporate - Technology & Services" isStacked="true">
+    </ui-stats-timeline>
 
-<ui-stats-timeline label="Contacts Created Using LinkedIn Copy/Paste" limit="30" function="none"
-  src="https://sfapi.glgroup.com/api/cptool/stats" 
-  type="column">
-</ui-stats-timeline>
+    <ui-stats-timeline label="Contacts Created Using LinkedIn Copy/Paste" limit="30" function="none"
+      src="https://sfapi.glgroup.com/api/cptool/stats" 
+      type="area">
+    </ui-stats-timeline>
 
     
     <ui-stats-timeline label="Missing some Properties"
@@ -44,12 +44,6 @@
               {'date':'2015-04-01','count':5, 'size':5} ]"
       valueProperties="count,size"
     >
-    </ui-stats-timeline>
-
-    <ui-stats-timeline label="Recommender Attendance (last 30 days)" groupby="day"
-     src="https://services.glgresearch.com/event-rec-text-matching/responseCounts?when=LAST_N_DAYS:30"
-     dateProperty="when" valueProperties="Confirmed or RSVP, Confirmed, Half of RSVP = Confirmed or RSVP / 2"
-     smooth="false" type="area" isStacked="false" includepPartialGroups="true" reduction="sum">
     </ui-stats-timeline>
 
     <ui-stats-timeline label="Derived Property on Manual Data"
@@ -63,7 +57,7 @@
 
     <ui-stats-timeline label="Derived Property on Manual Data, Dupe Name"
       data="[ {'date':'2015-01-01', 'count':3}, {'date':'2015-02-01','count':11}, {'date':'2015-03-01','count':2}, {'date':'2015-04-01','count':5} ]"
-      valueProperty="half count=count/2,count"
+      valueProperty="'half count'=count/2,count"
     >
     </ui-stats-timeline>
 
