added new option to move hAxis text to the inside of the chart

--- a/demo.html
+++ b/demo.html
@@ -235,7 +235,9 @@
 
     <ui-stats-chart name="Object Array (Columns)" type="column"
       data="[ {'color':'blue', 'count':3}, {'color':'white', 'count':11}, {'color':'yellow', 'count':2}, {'color':'red', 'count':5} ]"
-      cols="[{'id':'color', 'type':'string'}, {'id':'count'}]">
+      cols="[{'id':'color', 'type':'string'}, {'id':'count'}]"
+      textPosition="in"
+      hAxisTextColor="red">
     </ui-stats-chart>
 
     <ui-stats-chart name="Single Value Object Array"
