--- a/src/ui-stats-chart.html
+++ b/src/ui-stats-chart.html
@@ -1,4 +1,4 @@
-<polymer-element name="ui-stats-chart" attributes="data src limit name smooth type cols groupBy width method onLoad minValue">
+<polymer-element name="ui-stats-chart" attributes="data src limit name smooth type cols groupBy width method onLoad minValue textPosition hAxisTextColor">
   <link rel="import" href="../google-chart/google-chart.html">
 
   <template>
