Added minValue to timeline

--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -2,7 +2,7 @@
    groupBy groupByFunction reduction units dateProperty valueProperty datePattern
    smooth type valueProperties method trendline transform absoluteChange showChange since until
    invertChange includePartialGroups onLoad isStacked
-   function label labels height
+   function label labels height minValue
    ">
   <link rel="import" href="../google-chart/google-chart.html">
 
