Added timeline minValue demo

--- a/demo.html
+++ b/demo.html
@@ -189,6 +189,11 @@
       reduction="last">
     </ui-stats-timeline>
 
+    <ui-stats-timeline label="Static Object Array minValue=2" minValue=2
+                       data="[ {'date':'2015-01-01', 'value':3}, {'date':'2015-02-01','value':11}, {'date':'2015-03-01','value':2}, {'date':'2015-04-01','value':5} ]"
+                       reduction="last">
+    </ui-stats-timeline>
+
     <ui-stats-timeline label="Static Object Array height=4em" height="4em"
                        data="[ {'date':'2015-01-01', 'value':3}, {'date':'2015-02-01','value':11}, {'date':'2015-03-01','value':2}, {'date':'2015-04-01','value':5} ]"
                        reduction="last">
